--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     />
     <title>phdAssistance</title>
     <script src="https://kit.fontawesome.com/9bed57815f.js" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
